Services page - complete

--- a/services.html
+++ b/services.html
@@ -32,49 +32,6 @@
 
     <section id="services">
         <div class="container">
-            <h2 class="page-title">
-                Services
-            </h2>
-            <article class="text-col">
-
-                <ul id="services">
-                    <li class="service">
-                        <h3>Website Design</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit culpa iure fugiat omnis
-                            minima eius porro, dolorum, necessitatibus perspiciatis maxime tenetur explicabo commodi
-                            vitae! Fuga ratione adipisci laboriosam harum expedita.</p>
-                        <p>Pricing: $1,000 - $2,500</p>
-                    </li>
-                    <li class="service">
-                        <h3>Zapier Implementation</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit culpa iure fugiat omnis
-                            minima eius porro, dolorum, necessitatibus perspiciatis maxime tenetur explicabo commodi
-                            vitae! Fuga ratione adipisci laboriosam harum expedita.</p>
-                        <p>Pricing: $500 - $1,500</p>
-                    </li>
-                    <li class="service">
-                        <h3>Zapier Services</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit culpa iure fugiat omnis
-                            minima eius porro, dolorum, necessitatibus perspiciatis maxime tenetur explicabo commodi
-                            vitae! Fuga ratione adipisci laboriosam harum expedita.</p>
-                        <p>Pricing: $150 per month</p>
-                    </li>
-                    <li class="service">
-                        <h3>Website Hosting</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit culpa iure fugiat omnis
-                            minima eius porro, dolorum, necessitatibus perspiciatis maxime tenetur explicabo commodi
-                            vitae! Fuga ratione adipisci laboriosam harum expedita.</p>
-                        <p>Pricing: Starting at $25 per month</p>
-                    </li>
-                    <li class="service">
-                        <h3>Domain Name Purchasing</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit culpa iure fugiat omnis
-                            minima eius porro, dolorum, necessitatibus perspiciatis maxime tenetur explicabo commodi
-                            vitae! Fuga ratione adipisci laboriosam harum expedita.</p>
-                        <p>Pricing: Starting at $19 per year</p>
-                    </li>
-                </ul>
-            </article>
             <aside id="rfp">
                 <div class="dark sidebar">
                     <h3>Request a free quote...</h3>
@@ -92,6 +49,43 @@
                     </form>
                 </div>
             </aside>
+
+            <h2 id="services-header">
+                Our Services
+            </h2>
+            <article class="text-col">
+
+                <ul id="services">
+                    <li class="service">
+                        <h3>Website Design</h3>
+                        <p>Get a beautifully designed website for an afforcible price and with speedy turnaround.</p>
+                        <p>Pricing: $1,000 - $2,500</p>
+                    </li>
+                    <li class="service">
+                        <h3>Zapier Implementation</h3>
+                        <p>Automate your day-to-day workflow with the power of Zapier task automation. Rollup your other
+                            software components into one integrated powerhouse.</p>
+                        <p>Pricing: $500 - $1,500</p>
+                    </li>
+                    <li class="service">
+                        <h3>Zapier Services</h3>
+                        <p>Ongoing task automation for up to 2500 automations per month. Broken task repair services
+                            included.</p>
+                        <p>Pricing: $150 per month</p>
+                    </li>
+                    <li class="service">
+                        <h3>Website Hosting</h3>
+                        <p>Host your website for one low, low price.</p>
+                        <p>Pricing: Starting at $25 per month</p>
+                    </li>
+                    <li class="service">
+                        <h3>Domain Name Purchasing</h3>
+                        <p>Register your domain with us and never worry about losing your business domain.</p>
+                        <p>Pricing: Starting at $19 per year</p>
+                    </li>
+                </ul>
+            </article>
+
         </div>
     </section>
 
