--- a/index.html
+++ b/index.html
@@ -102,9 +102,7 @@
             </div>
         </div>
 
-        <div class="action-btn-wrapper">
-            <a href="/services.html"><button class="action-btn">Contact Us</button></a>
-        </div>
+        <a class="abtn" href="/services.html"><button class="action-btn">Contact Us</button></a>
 
     </section>
 
