Button fixes and HTML Validation fixes.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <div class="container">
             <h1>Affordable Professional <br id="mobile-only">Web Design</h1>
             <p id='blurb-text'>Professional Websites & Design for Small Business</p>
+        </div>
     </section>
 
     <section id="skills">
