--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
             </div>
             <nav>
                 <ul>
-                    <li class="active"><a href="index.html">Home</a></li>
+                    <li class="active"><a href="#">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
+                    <li><a href="work.html">Work</a></li>
                 </ul>
             </nav>
         </div>
@@ -103,7 +104,7 @@
             </div>
         </div>
 
-        <a class="abtn" href="/services.html"><button class="action-btn">Contact Us</button></a>
+        <a class="abtn" href="/services.html"><button class="action-btn">Contact Me</button></a>
 
     </section>
 
