--- a/about.html
+++ b/about.html
@@ -23,8 +23,9 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li class="active"><a href="about.html">About</a></li>
+                    <li class="active"><a href="#">About</a></li>
                     <li><a href="services.html">Services</a></li>
+                    <li><a href="work.html">Work</a></li>
                 </ul>
             </nav>
         </div>
