--- a/services.html
+++ b/services.html
@@ -24,7 +24,8 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li class="active"><a href="services.html">Services</a></li>
+                    <li class="active"><a href="#">Services</a></li>
+                    <li><a href="work.html">Work</a></li>
                 </ul>
             </nav>
         </div>
