--- a/work.html
+++ b/work.html
@@ -10,7 +10,7 @@
     <meta name="keywords"
         content="web design, web developer, affordable website, affordable web design, affordable web developer, small business website, website for small business">
     <meta name="author" content="Ryan Paranich">
-    <title>Roga Web Design | Welcome</title>
+    <title>Roga Web Design | Work</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/3fe1c2969f.js" crossorigin="anonymous"></script>
@@ -20,7 +20,7 @@
     <header>
         <div class="container">
             <div id="header-brand">
-                <h1><span class="feature">Roga</span> Web Design</h1>
+                <h2><span class="feature">Roga</span> Web Design</h2>
             </div>
             <nav>
                 <ul>
@@ -37,8 +37,12 @@
         <h2><i class="far fa-file-download"></i> Downloads:</h2>
         <ul>
             <li>
-                <a href="./PDFs/DGL103 Project - Part 1.pdf"> DGL103 Project
+                <a href="./PDFs/DGL103 Project - Part 1.pdf" download> DGL103 Final Project
                     Part 1</a>
+            </li>
+            <li>
+                <a href="./PDFs/DGL103 Final Project.pdf" download> DGL103 Final Project
+                    Part 2</a>
             </li>
         </ul>
 
